Remoced an issue with overflow-x in Landing.js and landing.css

--- a/online-store/src/components/Landing/landing.css
+++ b/online-store/src/components/Landing/landing.css
@@ -22,7 +22,7 @@
 /* Featured Products */
 
 #featuredProdcuts {
-  margin: 20px 60px;
+  margin: 20px 40px;
 }
 
 .featured-container {
@@ -36,7 +36,6 @@
   background-size: cover;
   height: 90vh;
   width: 100vw;
-  margin: -10px;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -47,4 +46,8 @@
 
 #featuredStore p {
   margin: 10px 0;
+}
+
+#featuredStore a {
+  color: #fff;
 }
